[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game Systems/CookingSystem.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Game Systems/IngredientButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon_16x16.png" type="Texture" id=4]

[node name="CookingSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="BlockOut" type="Control" parent="."]

[node name="ColorRect" type="ColorRect" parent="BlockOut"]
margin_right = 160.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 96, 88 )
color = Color( 0.192157, 0.611765, 0.105882, 1 )

[node name="ColorRect2" type="ColorRect" parent="BlockOut"]
margin_left = 160.0
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 96, 88 )
color = Color( 0.333333, 0, 0.917647, 1 )

[node name="Navbar" type="ColorRect" parent="BlockOut/ColorRect2"]
visible = false
margin_left = 64.0
margin_right = 160.0
margin_bottom = 180.0
color = Color( 0.172549, 0.0235294, 0.341176, 1 )

[node name="Label" type="Label" parent="BlockOut/ColorRect2/Navbar"]
margin_left = 28.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 22.0
text = "Orders"

[node name="Recipe" type="ColorRect" parent="BlockOut/ColorRect2/Navbar"]
margin_left = 8.0
margin_top = 32.0
margin_right = 88.0
margin_bottom = 76.0
color = Color( 0.321569, 0.129412, 0.498039, 1 )

[node name="TextureRect" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 4.0
margin_top = 12.0
margin_right = 68.0
margin_bottom = 76.0
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 32.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 32.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 80.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 32.0
margin_top = 28.0
margin_right = 96.0
margin_bottom = 92.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 44.0
margin_top = 8.0
margin_right = 59.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label4" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 60.0
margin_top = 16.0
margin_right = 92.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
text = "20 gold"
autowrap = true

[node name="Label2" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 44.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label3" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe"]
margin_left = 44.0
margin_top = 32.0
margin_right = 59.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Recipe2" type="ColorRect" parent="BlockOut/ColorRect2/Navbar"]
margin_left = 8.0
margin_top = 80.0
margin_right = 88.0
margin_bottom = 124.0
color = Color( 0.321569, 0.129412, 0.498039, 1 )

[node name="TextureRect" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 4.0
margin_top = 12.0
margin_right = 68.0
margin_bottom = 76.0
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 32.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 32.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 80.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 32.0
margin_top = 28.0
margin_right = 96.0
margin_bottom = 92.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 44.0
margin_top = 8.0
margin_right = 59.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label4" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 60.0
margin_top = 16.0
margin_right = 92.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
text = "20 gold"
autowrap = true

[node name="Label2" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 44.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label3" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe2"]
margin_left = 44.0
margin_top = 32.0
margin_right = 59.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Recipe3" type="ColorRect" parent="BlockOut/ColorRect2/Navbar"]
margin_left = 8.0
margin_top = 128.0
margin_right = 88.0
margin_bottom = 172.0
color = Color( 0.321569, 0.129412, 0.498039, 1 )

[node name="TextureRect" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 4.0
margin_top = 12.0
margin_right = 68.0
margin_bottom = 76.0
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 32.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 68.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 32.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 80.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 32.0
margin_top = 28.0
margin_right = 96.0
margin_bottom = 92.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 44.0
margin_top = 8.0
margin_right = 59.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label4" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 60.0
margin_top = 16.0
margin_right = 92.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
text = "20 gold"
autowrap = true

[node name="Label2" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 44.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 34.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="Label3" type="Label" parent="BlockOut/ColorRect2/Navbar/Recipe3"]
margin_left = 44.0
margin_top = 32.0
margin_right = 59.0
margin_bottom = 46.0
rect_scale = Vector2( 0.5, 0.5 )
text = "x1"

[node name="UI" type="Control" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="PopUpBackground" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -72.0
margin_right = 120.0
margin_bottom = 72.0
color = Color( 0.984314, 1, 0.85098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="UI/PopUpBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="Outer" type="HBoxContainer" parent="UI/PopUpBackground/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 235.0
margin_bottom = 144.0
alignment = 2

[node name="TextureButton" type="TextureButton" parent="UI/PopUpBackground/MarginContainer/Outer"]
margin_left = 214.0
margin_right = 230.0
margin_bottom = 139.0
texture_normal = ExtResource( 4 )

[node name="RecipeSelect" type="HBoxContainer" parent="UI/PopUpBackground"]
margin_left = 5.0
margin_top = 5.0
margin_right = 235.0
margin_bottom = 134.0

[node name="RecipeSelect" type="MarginContainer" parent="UI/PopUpBackground/RecipeSelect"]
margin_right = 230.0
margin_bottom = 129.0
size_flags_horizontal = 3

[node name="Inner" type="HBoxContainer" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect"]
margin_right = 230.0
margin_bottom = 129.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner"]
margin_right = 230.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer"]
margin_left = 83.0
margin_right = 147.0
margin_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer"]
margin_top = 68.0
margin_right = 230.0
margin_bottom = 82.0
text = "Recipe name"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer"]
margin_top = 86.0
margin_right = 230.0
margin_bottom = 102.0
alignment = 1

[node name="IngredientButton" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 77.0
margin_right = 93.0

[node name="IngredientButton2" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 97.0
margin_right = 113.0

[node name="IngredientButton3" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 117.0
margin_right = 133.0

[node name="IngredientButton4" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 137.0
margin_right = 153.0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer"]
margin_top = 106.0
margin_right = 230.0
margin_bottom = 122.0
custom_constants/separation = -1
alignment = 1

[node name="TextureButton" type="TextureButton" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer2"]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer2"]
margin_left = 107.0
margin_right = 123.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="UI/PopUpBackground/RecipeSelect/RecipeSelect/Inner/VBoxContainer/HBoxContainer2"]
margin_left = 122.0
margin_right = 138.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 4 )

[node name="MiniGame" type="MarginContainer" parent="UI/PopUpBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10
